<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="lsycool.com.himaterial.MainActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_practice"
        android:title="@string/action_practice"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_upgrade"
        android:title="@string/action_upgrade"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_upload"
        android:title="@string/action_upload"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_speeking"
        android:title="@string/action_speeking"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
